fix: responsive spacing and arrangement

--- a/index.css
+++ b/index.css
@@ -33,7 +33,7 @@
   padding: 0 64px 0 64px;
   /* margin: 0px 0px 2px 2px; */
   background-color: rgba(255, 255, 255, 0.8);
-  box-shadow: 0 0 20em 20em rgba(255, 255, 255, 0.8);
+  box-shadow: 0 0 7em 10em rgba(255, 255, 255, 0.8);
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
@@ -75,7 +75,7 @@
 }
 #couple .couple-name {
   font-family: Indulge;
-  font-size: 3.5em;
+  font-size: 3.3em;
 }
 #couple .couple-avatar {
   height: 40vh;
@@ -92,7 +92,6 @@
 
 #event #invitation {
   text-align: center;
-  /* background-color: antiquewhite; */
   margin: 0 auto;
 }
 #event #invitation #restaurant {
@@ -141,7 +140,7 @@
   display: block;
   margin: 0 auto;
   width: 100%;
-  height: 720px;
+  height: 840px;
 }
 
 @media (min-width: 768px) {
@@ -158,6 +157,10 @@
   }
   #home span {
     font-size: 3.5em;
+  }
+
+  #cheer iframe {
+    height: 720px;
   }
 }
 
